app/stylesheets/main.scss
/* ... */
.content {
  z-index: 1;
  width: 100vw;
  height: 100vh;
  position: relative;
}

.decorations {
  width: 100%;
}

.noMouse {
  pointer-events: none;
}

#mouseIcon {
  position: absolute;
  top: 85%;
  left: 50%;
  transform: translateX(-50%);
  text-transform: uppercase;
}

#logo {
  margin-top: 60px;
  margin-bottom: 20px;
}

#sunburstContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.sunburst-svg {
  width: 100vmin;
  height: 100vmin;
}

#sunburst3 {
  position: absolute;
  top: 50%;
  margin-top: -800px;
  left: 50%;
  margin-left: -800px;
  z-index: -1;
}

#sunburst2 {
  //transform-origin: 50% 50%;
  //animation: orbitSpin 300s infinite linear;
}

@keyframes orbitSpin {
  0% { transform: rotate(0deg);}
  100% { transform: rotate(360deg);}
}

#sunburst path {
  stroke: rgb(60, 115, 165);
  fill-rule: evenodd;
}

#sunburst2 path {
  stroke: rgba(255, 255, 255, 1.0);
  fill-rule: evenodd;
}

#sunburst2 {
  opacity: 0.05;
}

.force-3d-accel {
  /* Safari performance smoothing */
  //transform: translateZ(0);
  //backface-visibility: hidden;
}

#moon {
  @extend .force-3d-accel;
  will-change: bottom, right, opacity;
  //display: none;
  opacity: 0;
  position: fixed;
  bottom: calc(5% - 155px);
  right: calc(0% - 155px);
  opacity: 1.0;
  z-index: 1;
  transition: right 1100ms ease, bottom 1100ms ease, opacity 350ms ease;
  @include breakpoint(medium down) {
    display: none !important;
  }
}

#sun {
  @extend .force-3d-accel;
  will-change: top, left, opacity;
  //display: none;
  opacity: 0;
  position: fixed;
  top: calc(-6% - 3 * 55px);
  left: calc(0% - 155px);
  opacity: 1.0;
  z-index: 1;
  transition: left 1100ms ease, top 1100ms ease, opacity 350ms ease;
  @include breakpoint(medium down) {
    display: none !important;
  }
}

.bgPixel {
  will-change: width, height;
  position: fixed;
  width: 0;
  height: 0;
  z-index: 0;
  opacity: 0.5;
  box-shadow: 0 0 5px;
  @include breakpoint(medium down) {
    display: none;
  }
  //transition: width 100ms ease, height 100ms ease;
}

.fp-responsive #moon, .fp-responsive #sun {
  opacity: 0 !important;
}

#fullpage > section {
  @include breakpoint(medium down) {
    padding-top: 2em;
  }
}

#thirdPage header {
  @include breakpoint(medium down) {
    padding-top: 3em;
  }
}

.menu-shadow {
  text-shadow: 0px 0px 2px rgba(12, 77, 120, 0.7);
}

#fixed-menu {
  position: fixed;
  top: 0px;
  left: 0px;
  padding: 20px;
  height: auto;
  z-index: 3;
  @include breakpoint(medium down) {
    width: 100%;
  }
}

#fixed-menu ul {
  @include breakpoint(medium down) {
    left: 0;
    top: 0;
    z-index: -1;
    width: 100%;
    padding-top: 2.1em;
    padding-bottom: 0.8em;
    position: absolute;
    margin-left: 0 !important;
    padding-left: 20px;
    padding-right: 20px;
    background-color: rgba(0, 0, 0, 0.8);
  }
}

#fixed-menu .menu {
  margin-top: 0.2em;
  clear: both;
  float: left;
  margin-left: 1.7em;
}

#fixed-menu .menu li {
  text-transform: uppercase;
  font-weight: bold;
  margin-bottom: 3px;
  @extend .menu-shadow;
}

#fixed-menu .menu li.menu_divider {
  border-bottom: none;
  height: 1em;
  @include breakpoint(medium down) {
    height: 1.5em;
  }
}

#fixed-menu .menu li.menu_divider::after {
  background: none;
}

#fixed-menu .menu li a {
  color: #fff;
  padding: 0.3rem 0;
  padding-bottom: 0;
  margin-bottom: 0;
  @include breakpoint(medium down) {
    font-size: 1.4em;
  }
}

#fixed-menu .menu li:last-child::after {
  background: none;
}

#fixed-menu .menu li::after{
  content: "";
  position: absolute;
  height: 1px;
  width: 100%;
  background: #444;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
  @include breakpoint(medium down) {
    height: 2px;
  }
 }

.asterisk {
  font-size: 3.2rem;
  font-weight: bold;
  line-height: 0.5em;
  width: 2.5em;
  @include breakpoint(medium down) {
    display: block;
    width: 100%;
  }
  height: 0.5em;
  overflow: hidden;
}

#asterisk-image {
  height: 0.4em;
  width: 0.4em;
  vertical-align: top;
}

#menu-logo {
  display: none;
  height: 0.4em;
  width: 2em;
  margin-left: 0.1em;
  vertical-align: top;
  //margin-top: -0.4em;
  @extend .menu-shadow;
}


.asterisk:hover {
  cursor: pointer;
}

ul.job_list_items {
  text-align: right;
  margin-top: 5em;
}

ul.job_list_items li {
  width: 21em;
  height: 3em;
  background: #3B4E6E;
  /*margin-bottom: 1px;*/
  margin-bottom: 0.1em;
  text-align: left;
  margin-right: 0 !important;
}


ul.job_list_items li a {
  // height: 50px;
  height: 100%;
  color: #fff;
  line-height: 1.3 !important;
  font-weight: 400;
  font-size: 1.5em;
  padding: 0.7rem 1rem !important;/* !important because this gets overwritten by .menu.simple a*/
}

.menu.simple li {
  margin-right: 0;
}

#firstPage .columns{
  white-space: normal;
}

#firstPage .job_openings {
  padding-right: 0;
}

.profile {
  padding-right: 0;
  opacity: 0;
  position: relative;
  max-height: 100vh;
  z-index: 10;
  max-width: 100vw;
}
.panel-container .close-button {
  position: absolute;
  left: -3rem;
  background: #757C87;
  width: 3rem;
  height: 2.75rem;
  text-align: center;
  line-height: 2.75rem;
  font-weight: bold;
  color: #fff;
  font-size: 2.75rem;
  top: 0;
}

.panel-container .close-button-mobile {
  position: absolute;
  right: 0;
  background: #757C87;
  width: 2rem;
  height: 1.75rem;
  text-align: center;
  line-height: 1.75rem;
  font-weight: bold;
  color: #fff;
  font-size: 2rem;
  top: 0;
  display: block;
}

@media #{$medium-only} {
  .profile {
    margin-left: 3rem;
  }
}

// Slider
.slide-in {
	visibility: hidden;
	transition:visibility 0s linear 0.2s,opacity 0.2s linear;
  padding-left: 0;
}

.slide-in.is-visible {
	visibility: visible;
  opacity: 1;
	transition: visibility 0s 0s;
  transition: opacity 0.3s ease-in;
}

.slide-in-header {
	position: absolute;
	top: -50px;
	width: 90%;
	height: 50px;
	transition: top 0.3s 0s;
}

.hide-on-mobile.is-visible {
  margin-left: 0;
}
/* ... */

